cmake_minimum_required(VERSION 3.9)
project(cpp)

set(CMAKE_CXX_STANDARD 98)

add_executable(cpp d00/ex00/megaphone.cpp d00/ex00/megaphone.cpp d00/ex01/main.cpp d00/ex01/Contacts.hpp d00/ex01/Contacts.cpp d01/ex00/Pony.cpp d01/ex00/main.cpp d01/ex00/Pony.hpp d00/ex02/Account.class.cpp d01/ex01/ex01.cpp d01/ex02/Zombie.cpp d01/ex02/Zombie.hpp d01/ex02/ZombieEvent.cpp d01/ex02/ZombieEvent.hpp d01/ex02/main.cpp)